# ECommerce-FastAPI

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
controllers/: __init__.py  auth.py  avaliacoes.py  catalogo.py  categorias.py  endereco.py  enderecos.py  estoque.py  pagamentos.py  papeis.py  pedidos.py  produtos.py  users.py  usuarios.py
database/: __init__.py  schema.sql
model/: __init__.py  avaliacao.py  categoria.py  endereco.py  estoque.py  item_pedido.py  pagamento.py  papel.py  pedido.py  produto.py  produto_categoria.py  user.py  usuario_papel.py
models/: __init__.py  avaliacao.py  categoria.py  endereco.py  estoque.py  item_pedido.py  pagamento.py  papel.py  pedido.py  produto.py  produto_categoria.py  user.py  usuario.py  usuario_papel.py
routes/: __init__.py  auth.py  enderecos.py  papeis.py  usuarios.py
utils/: __init__.py
