[project]
name = "ecommerce-fastapi"
version = "0.1.0"
description = "Backend para ecommerce"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.136.3",
    "pydantic[email]>=2.13.4",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]
