[project]
name = "ecommerce-fastapi"
version = "0.1.0"
description = "Backend para ecommerce"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]
